kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: boompow-dash
  namespace: boompow
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    name: app
  selector:
    app: boompow-dash
